# CVModelLab

./: .gitignore  .metadata  CHANGELOG.md  CHANGELOG.ru.md  LICENSE  README.md  README.ru.md  analysis_options.yaml  pubspec.yaml
android/: .gitignore  build.gradle.kts
docs/: metrics.md  mobile_apps.md  mobile_pwa.md  server_mode.md  showcase_demo.md  supported_formats.md  user_guide.md
lib/: cv_model_lab.dart  main.dart
linux/: CMakeLists.txt
scripts/: analyze.ps1  analyze.sh  build_linux.sh  build_release_all.sh  build_web.sh  build_windows.ps1  run_server.ps1  run_server.sh
server/: .gitignore  README.md  README.ru.md  example_project.json  pyproject.toml  server.example.yaml
server/cvmlab_server/: __init__.py  auth.py  config.py  main.py
server/cvmlab_server/api/: ap_metrics.py  browse.py  cache.py  evaluation.py  health.py  images.py  manifests.py  sessions.py  static.py
server/cvmlab_server/core/: ap_eval.py  cache.py  coco_loader.py  detection_matcher.py  iou.py  manifest_store.py  metrics.py  models.py  paths.py  project_descriptor.py  serialization.py  session_manager.py  thumbnails.py
server/tests/: conftest.py  test_config_auth.py  test_evaluation_ap.py  test_parity.py  test_paths_browse.py  test_sessions_images.py
server/tests/fixtures/: mini_coco_class_agnostic.json  mini_coco_default.json  mini_coco_strict.json  showcase_model_a_default.json  showcase_model_b_class_agnostic.json  showcase_model_b_default.json  showcase_model_c_default.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+261 files in other folders)
